MODIFY: style.css, enter.html , human_nature.html, weather_visualisation.html Attach hosted video links. Fix the layout. Make videos playable on mobile.

--- a/src/Enter_Page/style.css
+++ b/src/Enter_Page/style.css
@@ -18,6 +18,7 @@ body {
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    gap: 1%;
 }
 
 .enter_content {
@@ -34,7 +35,12 @@ body {
 
 video,
 .enterv2 {
+    display: block;
     width: 100%;
+}
+
+iframe {
+    display: none;
 }
 
 @media only screen and (max-width: 45rem) {
@@ -44,6 +50,11 @@ video,
     }
     .enter-wrapper {
         display: block;
-        height: 100vh;
+        /* height: 100vh; */
+    }
+    video,
+    .enterv2 {
+        /* width: 90%; */
+        padding: 3% 0;
     }
 }
